[package]
name = "email_checker"
version = "0.1.0"
edition = "2021"
description = "Email checker for OpenClaw - Rust wrapper around Python implementation"
authors = ["Hijirii"]

[dependencies]

[dev-dependencies]

[[bin]]
name = "email_checker"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
