[package]
name = "email_checker"
version = "0.1.0"
edition = "2021"
description = "Email checker for OpenClaw - Rust wrapper with IMAP support"
authors = ["Hijirii"]

[dependencies]
# IMAP support
imap = "2"

# HTTP client for OpenClaw API
reqwest = { version = "0.11", features = ["json"] }

# Time parsing
humantime = "2"
chrono = "0.4"

# Email parsing
mailparse = "0.14"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTML escape
html-escape = "0.2"

# Regex for text processing
regex = "1"

[dev-dependencies]

[[bin]]
name = "email_checker"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
