[package]
name = "email_checker"
version = "0.2.0"
edition = "2021"
description = "Email checker for OpenClaw - Rust implementation"
authors = ["Hijirii"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]

[[bin]]
name = "email_checker"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
